kubernetes/clusters/home/infrastructure/rancher/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rancher-forwarded-proto
  namespace: rancher
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
