kubernetes/clusters/home/infrastructure/rancher/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rancher.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: rancher-forwarded-proto
      services:
        - name: rancher
          port: 80
